NotificationService/base/deployment-notificationservice.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: notificationservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notificationservice
  template:
    metadata:
      labels:
        app: notificationservice
    spec:
      containers:
        - name: notificationservice
          image: "ghcr.io/inholland-cloud-minor-2526/group1-notificationservice:dev"
          ports:
            - containerPort: 8080
              protocol: TCP
